# edupropyth

./: .gitignore  .pre-commit-config.yaml  DOCKER.md  README.md  commitlint.config.js  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
backend/: .coverage  .dockerignore  .env.production  .env.test  .env.testing  .flake8  .gitignore  Dockerfile  Makefile  bandit-report.json  coverage.xml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  typeorm.config.ts
backend/apps/courses/: README_API.md  admin.py  models.py  urls.py  views.py
backend/apps/users/: adapters.py  admin.py  apps.py  middleware.py  signals.py  urls.py
backend/config/: settings.py  urls.py
backend/config/settings/: base.py  develop.py  production.py  test.py
backend/education/: settings.py
backend/requirements/: base.txt  dev.txt
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.module.ts
backend/src/config/: database.config.ts  jwt.config.ts  typeorm.config.ts
backend/src/courses/: courses.controller.spec.ts  courses.controller.ts  courses.module.ts  courses.service.spec.ts  courses.service.ts
backend/src/migrations/: 1730154000000-create-courses-schema.ts  AddBlueprintsAndGroups1700000000002.ts  UpdateUserRoles.ts
backend/src/realTime/: realtime.events.ts  realtime.gateway.ts  realtime.module.ts  ws-jwt.guard.ts
backend/src/seeds/: admin.seed.ts  course-editions.seeder.ts  courses.seeder.ts  edition-instructors.seeder.ts  enrollments.seeder.ts  run-seed.ts  seed.ts  users.seeder.ts
backend/src/users/: users.controller.spec.ts  users.controller.ts  users.module.ts  users.service.spec.ts  users.service.ts
backend/test/: app.e2e-spec.ts  courses.e2e-spec.ts  editions.e2e-spec.ts
backend/test/utils/: db.ts  (+3 more)
(+510 files in other folders)
